--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,18 @@
         "persistent": false
     },
 
+    "content_scripts": [
+        {
+            "js": [
+                "betterCSSInject.js"
+            ],
+            "matches": [
+                "http://*/*",
+                "https://*/*"
+            ]
+        }
+    ],
+
     "browser_action": {
         "default_title": "Enable Better CSS Inject"
     },
