--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Super CSS Inject",
-    "version": "1.0",
+    "version": "1.0.1",
     "description": "Keep multiple stylesheets ready to inject and change on the fly!",
     "manifest_version": 2,
 
@@ -35,7 +35,8 @@
     ],
 
     "browser_action": {
-        "default_title": "Enable Super CSS Inject"
+        "default_title": "Enable Super CSS Inject",
+        "default_icon": "icons/48x48.png"
     },
 
     "options_ui": {
