--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,10 +4,7 @@
     "description": "Keep multiple stylesheets ready to inject and change on the fly!",
     "manifest_version": 2,
 
-    "permissions": [
-        "activeTab",
-        "storage"
-    ],
+    "permissions": ["activeTab", "storage"],
 
     "icons": {
         "48": "icons/48x48.png",
@@ -16,31 +13,25 @@
     },
 
     "background": {
-        "scripts": [
-            "background.js"
-        ]
+        "scripts": ["background.js"]
     },
 
     "content_scripts": [
         {
-            "js": [
-                "SuperCSSInject.js"
-            ],
-            "matches": [
-                "http://*/*",
-                "https://*/*"
-            ],
+            "js": ["SuperCSSInject.js"],
+            "matches": ["http://*/*", "https://*/*"],
             "run_at": "document_end"
         }
     ],
 
     "browser_action": {
         "default_title": "Enable Super CSS Inject",
-        "default_icon": "icons/48x48.png"
+        "default_icon": "icons/48x48.png",
+        "default_popup": "popup.html"
     },
 
     "options_ui": {
         "page": "options.html",
         "open_in_tab": true
     }
-  }
+}
