--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
     "name": "super_css_inject",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "description": "Keep multiple stylesheets ready to inject and change on the fly. Works with **LiveReload**. Compatible with Chrome and Firefox.",
     "main": "index.js",
-    "dependencies": {
-        "stylelint-config-recommended": "^2.2.0"
-    },
+    "dependencies": {},
     "devDependencies": {
-        "eslint": "^6.1.0"
+        "eslint": "^6.1.0",
+        "stylelint-config-recommended": "^2.2.0"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
