--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-    "name": "super_css_inject",
-    "version": "1.2.0",
-    "description": "Keep multiple stylesheets ready to inject and change on the fly. Works with **LiveReload**. Compatible with Chrome and Firefox.",
-    "main": "index.js",
-    "dependencies": {},
-    "devDependencies": {
-        "eslint": "^6.1.0",
-        "stylelint-config-recommended": "^2.2.0"
-    },
+    "name": "app",
+    "version": "0.1.0",
+    "private": true,
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "webpack --config webpack.prod.js",
+        "dev": "webpack -w --config webpack.dev.js"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/nelsonr/super_css_inject.git"
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     },
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/nelsonr/super_css_inject/issues"
-    },
-    "homepage": "https://github.com/nelsonr/super_css_inject#readme"
+    "devDependencies": {
+        "@types/chrome": "^0.0.197",
+        "@types/eslint": "^8.4.6",
+        "@types/firefox-webext-browser": "^94.0.1",
+        "@types/node": "^18.7.14",
+        "@types/react": "^18.0.17",
+        "@types/react-dom": "^18.0.6",
+        "@typescript-eslint/eslint-plugin": "^5.36.2",
+        "@typescript-eslint/parser": "^5.36.2",
+        "eslint": "^8.24.0",
+        "eslint-plugin-react": "^7.31.8",
+        "ts-loader": "^9.4.1",
+        "typescript": "^4.8.3",
+        "webpack": "^5.65.0",
+        "webpack-cli": "^4.9.1",
+        "webpack-merge": "^5.8.0"
+    }
 }
