--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.eol": "\n",
     "eslint.enable": true,
-    "eslint.run": "onSave"
+    "eslint.run": "onSave",
+    "editor.codeActionsOnSave": {
+        "source.fixAll": true,
+        "source.organizeImports": true
+    }
 }
