--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "scripts": {
         "build": "webpack --config webpack.prod.js",
-        "dev": "webpack -w --config webpack.dev.js"
+        "dev": "webpack -w --config webpack.dev.js",
+        "test": "jest"
     },
     "dependencies": {
         "react": "^18.2.0",
@@ -14,14 +15,20 @@
         "@types/chrome": "^0.0.197",
         "@types/eslint": "^8.4.6",
         "@types/firefox-webext-browser": "^94.0.1",
+        "@types/jest": "^29.5.3",
         "@types/node": "^18.7.14",
         "@types/react": "^18.0.17",
         "@types/react-dom": "^18.0.6",
+        "@types/sinon-chrome": "^2.2.11",
         "@typescript-eslint/eslint-plugin": "^5.36.2",
         "@typescript-eslint/parser": "^5.36.2",
         "eslint": "^8.24.0",
         "eslint-plugin-react": "^7.31.8",
+        "jest": "^29.6.1",
+        "sinon-chrome": "^3.0.1",
+        "ts-jest": "^29.1.1",
         "ts-loader": "^9.4.1",
+        "ts-node": "^10.9.1",
         "typescript": "^4.8.3",
         "webpack": "^5.65.0",
         "webpack-cli": "^4.9.1",
