Add new "shortname" field to the Stylesheet (WIP)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,9 @@
     "files.eol": "\n",
     "eslint.enable": true,
     "eslint.run": "onSave",
+    "editor.formatOnSave": false,
     "editor.codeActionsOnSave": {
-        "source.fixAll": true,
-        "source.organizeImports": true
+        "source.fixAll": "explicit",
+        "source.organizeImports": "explicit"
     }
 }
