--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,6 +49,13 @@
             }
         ],
         "newline-before-return": "error",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "warn",
+            {
+                "argsIgnorePattern": "^_"
+            }
+        ],
         "object-curly-newline": [
             "error",
             {
@@ -59,7 +66,7 @@
             "error",
             "always"
         ],
-        "object-property-newline": "error",
+        // "object-property-newline": "error",
         "padding-line-between-statements": [
             "error",
             {
